[project]
name = "abstra-lua"
version = "0.0.1"
description = "A sandboxed Lua 5.5 interpreter written in pure Python"
authors = [
    {name = "Abstra", email = "support@abstracloud.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[project.urls]
repository = "https://github.com/abstra-app/abstra-lua-python"

[tool.poetry]
packages = [{include = "abstra_lua"}]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
